# sketcher

./: .gitignore  README.md  build_native.bat  build_native.sh  improuve_brush.md  improuve_expert.md  improvement_strategy.md  phase1_results.md  prouvement_strat_2.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/include/: sketcher_native.h
android/app/src/main/cpp/src/: calligraphy_native.cpp
android/app/src/main/kotlin/com/example/flutter_project/: MainActivity.kt
lib/: image_exporter.dart  main.dart
lib/controllers/: enhanced_sketch_controller.dart  sketch_controller.dart
lib/models/: brush_mode.dart  drawing_tool.dart  enhanced_stroke.dart  stroke.dart
lib/native/: sketcher_native.dart
lib/painters/: professional_sketch_painter.dart  sketch_painter.dart
lib/painters/brushes/: airbrush_renderer.dart  calligraphy_renderer.dart  charcoal_renderer.dart  oil_paint_renderer.dart  pastel_renderer.dart  watercolor_renderer.dart
lib/utils/: dialogs.dart  memory_manager.dart
lib/widgets/: controls_panel.dart  drawing_canvas.dart  enhanced_canvas_widget.dart  sketch_app_bar.dart  tool_settings_compact_widget.dart  tool_settings_widget.dart
lib/widgets/common/: pro_gradient_track_shape.dart  pro_slider.dart
lib/widgets/drawing/: advanced_settings_sheet.dart  color_picker_dialog.dart  image_picker_widget.dart  inline_controls.dart  toolbar.dart
native/: CMakeLists.txt
native/include/: sketcher_native.h
native/src/: calligraphy_native.cpp
test/: integration_test.dart
test/controllers/: sketch_controller_test.dart
test/models/: drawing_tool_test.dart  stroke_test.dart
test/painters/: sketch_painter_test.dart
test/widgets/: drawing_canvas_test.dart  opacity_controls_test.dart
